-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0 Beta 2
-
None
-
Windows 7
-
8ac2ea94d37126ef68d394e056bcaf7769a99956
If some widget is grabbing the mouse via QWidget::grabMouse(), mousing over other widgets should not cause hover highlight on them. However, if the widgets are native, then they do highlight.
| For Gerrit Dashboard: QTBUG-27551 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 38234,1 | Fix enter/leave event generation between native widgets when grabbing. | master | qt/qtbase | Status: MERGED | +2 | 0 |